// ── ../grpc_contract/account/account_service.proto ────────────────────────────
syntax = "proto3";

package sg.flow.account.v1;

option java_multiple_files  = true;
option java_package         = "sg.flow.account.v1";
option java_outer_classname = "AccountServiceProto";

import "common/v1/bank.proto";
import "common/v1/account.proto";
import "common/v1/transaction.proto";
import "google/protobuf/wrappers.proto";          // for optional DoubleValue
import "google/protobuf/timestamp.proto";


service AccountService {
  rpc GetAccounts                       (GetAccountsRequest)                       returns (GetAccountsResponse);
  rpc GetAccountsWithTransactionHistory (GetAccountsWithTransactionHistoryRequest) returns (GetAccountsWithTransactionHistoryResponse);
  rpc GetAccount                        (GetAccountRequest)                        returns (sg.flow.common.v1.Account);
  rpc GetAccountWithTransactionHistory  (GetAccountWithTransactionHistoryRequest)  returns (AccountWithTransactionHistory);
  rpc GetDailyAssets                    (GetDailyAssetsRequest)                    returns (GetDailyAssetsResponse);
  rpc GetLast7DaysAssets                (GetLast7DaysAssetsRequest)                returns (GetLast7DaysAssetsResponse);
  rpc GetLast6MonthsEndOfMonthAssets    (GetLast6MonthsEndOfMonthAssetsRequest)    returns (GetLast6MonthsEndOfMonthAssetsResponse);
}

message GetAccountsRequest {
  // userId is extracted from metadata by your ServerInterceptor,
  // so no field needed here.
}

message GetAccountsResponse {
  repeated sg.flow.common.v1.Account accounts = 1;
}

message GetAccountsWithTransactionHistoryRequest {
  // userId via metadata
}

message GetAccountsWithTransactionHistoryResponse {
  repeated AccountWithTransactionHistory accounts = 1;
}

message GetAccountRequest {
  int64 account_id = 1;
}

message GetAccountWithTransactionHistoryRequest {
  int64 account_id = 1;
}

message AccountWithTransactionHistory {
  int64                              id                                  = 1;
  string                             account_number                      = 2;
  double                             balance                             = 3;
  string                             account_name                        = 4;
  AccountType                        account_type                        = 5;
  google.protobuf.DoubleValue        interest_rate_per_annum             = 6;  // nullable
  sg.flow.common.v1.Bank             bank                                = 7;
  repeated sg.flow.common.v1.TransactionHistoryDetail  recent_transaction_history_details = 8;
}

enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  SAVINGS                  = 1;
  CURRENT                  = 2;
  FIXED_DEPOSIT            = 3;
  FOREIGN_CURRENCY         = 4;
  OTHERS                   = 5;
}

/* ── Daily Asset Tracking ── */

message DailyAsset {
  google.protobuf.Timestamp asset_date = 1;
  double total_asset_value = 2;
  int32 account_count = 3;
  google.protobuf.Timestamp calculated_at = 4;
}

message GetDailyAssetsRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message GetDailyAssetsResponse {
  repeated DailyAsset daily_assets = 1;
}

message GetLast7DaysAssetsRequest {}

message GetLast7DaysAssetsResponse {
  repeated DailyAsset daily_assets = 1;
}

message GetLast6MonthsEndOfMonthAssetsRequest {}

message GetLast6MonthsEndOfMonthAssetsResponse {
  repeated DailyAsset daily_assets = 1;
}
