syntax = "proto3";
package sg.flow.common.v1;

option java_multiple_files = true;
option java_package        = "sg.flow.common.v1";
option java_outer_classname = "CommonAccountProto";

import "common/v1/bank.proto";

message BriefAccount {
  int64  id           = 1;
  double balance      = 2;
  string account_name = 3;
  Bank   bank         = 4;
}
